[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menus e Cutscene/tela-pc2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/btn_desligar.png" type="Texture" id=2]
[ext_resource path="res://Finais/Computador/Computador.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Buttons/btn_registros.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/btn_senha.png" type="Texture" id=5]
[ext_resource path="res://UI/icon.png" type="Texture" id=6]
[ext_resource path="res://menus/Btn_jogo.tscn" type="PackedScene" id=7]

[node name="Computador" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dentro" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.8
margin_top = -273.6
margin_right = 563.2
margin_bottom = 334.4
rect_scale = Vector2( 0.9, 0.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Dentro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_registros" parent="Dentro" instance=ExtResource( 7 )]
margin_left = 298.178
margin_top = 259.12
margin_right = -650.822
margin_bottom = -273.88
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 4 )

[node name="Btn_senha" parent="Dentro" instance=ExtResource( 7 )]
margin_left = 419.021
margin_top = 261.549
margin_right = -529.979
margin_bottom = -271.451
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 5 )

[node name="Btn_desligar" parent="Dentro" instance=ExtResource( 7 )]
margin_left = 11.6112
margin_top = 518.281
margin_right = -937.389
margin_bottom = -14.7186
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 2 )

[node name="Btn_jogo_clone" parent="Dentro" instance=ExtResource( 7 )]
margin_left = 560.552
margin_top = 258.552
margin_right = -399.448
margin_bottom = -242.448
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Dentro"]
margin_left = 558.709
margin_top = 325.156
margin_right = 625.709
margin_bottom = 356.156
text = "Clone
Nightmare"
align = 1

[node name="Tela_pc" type="Sprite" parent="."]
position = Vector2( 512, 304 )
z_index = 1000
texture = ExtResource( 1 )

[connection signal="pressed" from="Dentro/Btn_registros" to="." method="_on_Btn_registros_pressed"]
[connection signal="pressed" from="Dentro/Btn_senha" to="." method="_on_Btn_senha_pressed"]
[connection signal="pressed" from="Dentro/Btn_desligar" to="." method="_on_Btn_desligar_pressed"]
[connection signal="pressed" from="Dentro/Btn_jogo_clone" to="." method="_on_Btn_jogo_clone_pressed"]

[editable path="Dentro/Btn_desligar"]
